--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build Anope
       run: |-
         cd $GITHUB_WORKSPACE/anope/
-        cp $GITHUB_WORKSPACE/data/anope/* .
+        cp $GITHUB_WORKSPACE/patches/anope/* .
         CFLAGS=-O0 ./Config -quick
         make -C build -j 4
         make -C build install
@@ -48,7 +48,8 @@ jobs:
     - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
-        patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
+        patch -p0 < $GITHUB_WORKSPACE/patches/inspircd/inspircd_mainloop.patch
+        patch -p0 < $GITHUB_WORKSPACE/patches/inspircd/inspircd_gch.patch
         ./configure --prefix=$HOME/.local/inspircd --development
         make -j 4
         make install
