Can't make Hybrid linking work on Github CI
because the reverse DNS is 'cpu-pool.com' for some reason, and I don't
want to hardcode it, so I give up.

--- a/workflows.yml
+++ b/workflows.yml
@@ -160,7 +160,7 @@ tests:
         software: [charybdis]
 
     hybrid:
-        software: [hybrid, anope]
+        software: [hybrid]
 
     solanum:
         software: [solanum]
