actions/checkout doesn't work with non-github repos >_<

--- a/workflows.yml
+++ b/workflows.yml
@@ -41,20 +41,33 @@ software:
 
     plexus4:
         name: Plexus4
-        repository: https://gitlab.com/rizon/plexus4.git
-        refs:
-            stable: "20200510_0-610"
-            release: null
-            devel: "master"
-            devel_release: null
         path: plexus4
         separate_build_job: true
-        build_script: |
-            cd $GITHUB_WORKSPACE/plexus4
-            ./autogen.sh
-            ./configure --prefix=$HOME/.local/
-            make -j 4
-            make install
+        install_steps:
+            stable:
+                - name: clone
+                  run: |-
+                      git clone https://gitlab.com/rizon/plexus4.git@20200510_0-610
+                - name: build
+                  run: |-
+                      cd $GITHUB_WORKSPACE/plexus4
+                      ./autogen.sh
+                      ./configure --prefix=$HOME/.local/
+                      make -j 4
+                      make install
+            release: null
+            devel:
+                - name: clone
+                  run: |-
+                      git clone https://gitlab.com/rizon/plexus4.git@master
+                - name: build
+                  run: |-
+                      cd $GITHUB_WORKSPACE/plexus4
+                      ./autogen.sh
+                      ./configure --prefix=$HOME/.local/
+                      make -j 4
+                      make install
+            devel_release: null
 
     solanum:
         name: Solanum
