--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -146,25 +146,24 @@ jobs:
         key: ${{ runner.os }}-plexus4-stable
         path: |-
           ~/.cache
-          $GITHUB_WORKSPACE/plexus4
+          $GITHUB_WORKSPACE/placeholder
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Checkout Plexus4
-      uses: actions/checkout@v2
-      with:
-        path: plexus4
-        ref: 20200510_0-610
-        repository: https://gitlab.com/rizon/plexus4.git
-    - name: Build Plexus4
-      run: |
-        cd $GITHUB_WORKSPACE/plexus4
+    - name: clone
+      run: git clone https://gitlab.com/rizon/plexus4.git@20200510_0-610
+    - name: build
+      run: 'cd $GITHUB_WORKSPACE/plexus4
+
         ./autogen.sh
+
         ./configure --prefix=$HOME/.local/
+
         make -j 4
-        make install
+
+        make install'
     - name: Make artefact tarball
       run: cd ~; tar -czf artefacts-plexus4.tar.gz .local/ go/
     - name: Upload build artefacts
