--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -153,7 +153,10 @@ jobs:
       with:
         python-version: 3.7
     - name: clone
-      run: git clone https://gitlab.com/rizon/plexus4.git@20200510_0-610
+      run: 'curl https://gitlab.com/rizon/plexus4/-/archive/20200510_0-610/plexus4-20200510_0-610.tar.gz
+        | tar -zx
+
+        mv plexus4* plexus4'
     - name: build
       run: 'cd $GITHUB_WORKSPACE/plexus4
 
