--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -97,6 +97,46 @@ jobs:
         name: installed-inspircd
         path: ~/artefacts-*.tar.gz
         retention-days: 1
+  build-plexus4:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Create directories
+      run: cd ~/; mkdir -p .local/ go/
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-plexus4-devel
+        path: |-
+          ~/.cache
+          $GITHUB_WORKSPACE/placeholder
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: clone
+      run: 'curl https://gitlab.com/rizon/plexus4/-/archive/master/plexus4-master.tar.gz
+        | tar -zx
+
+        mv plexus4* plexus4'
+    - name: build
+      run: 'cd $GITHUB_WORKSPACE/plexus4
+
+        ./autogen.sh
+
+        ./configure --prefix=$HOME/.local/
+
+        make -j 4
+
+        make install'
+    - name: Make artefact tarball
+      run: cd ~; tar -czf artefacts-plexus4.tar.gz .local/ go/
+    - name: Upload build artefacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: installed-plexus4
+        path: ~/artefacts-*.tar.gz
+        retention-days: 1
   build-solanum:
     runs-on: ubuntu-latest
     steps:
@@ -186,6 +226,7 @@ jobs:
     - test-inspircd
     - test-inspircd-anope
     - test-limnoria
+    - test-plexus4
     - test-solanum
     - test-sopel
     - test-unrealircd
@@ -367,6 +408,44 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest results limnoria (devel)
+        path: pytest.xml
+  test-plexus4:
+    needs:
+    - build-plexus4
+    - build-anope
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-plexus4
+        path: '~'
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+        path: '~'
+    - name: Unpack artefacts
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+        plexus4
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results plexus4 (devel)
         path: pytest.xml
   test-solanum:
     needs:
