--- a/mypy.ini
+++ b/mypy.ini
@@ -18,5 +18,5 @@ ignore_missing_imports = True
 [mypy-ecdsa.util]
 ignore_missing_imports = True
 
-[mypy-pyxmpp2_scram]
-ignore_missing_imports = True
+[mypy-irctest.scram.*]
+disallow_untyped_defs = False
