Fix cache directives

--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -12,9 +12,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-anope-2.0.9
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/anope
+
+          '
     - name: Checkout Anope
       uses: actions/checkout@v2
       with:
