--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -12,9 +12,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-anope-2.0.9
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/anope
+
+          '
     - name: Checkout Anope
       uses: actions/checkout@v2
       with:
@@ -45,9 +47,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-hybrid-devel
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/ircd-hybrid
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -113,9 +117,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-plexus4-devel
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/placeholder
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -153,9 +159,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-solanum-devel
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/solanum
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -191,9 +199,11 @@ jobs:
       uses: actions/cache@v2
       with:
         key: ${{ runner.os }}-unrealircd-devel
-        path: |-
-          ~/.cache
+        path: '~/.cache
+
           $GITHUB_WORKSPACE/unrealircd
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
