--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Cache Anope
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-anope-2.0.9
+        key: 2-${{ runner.os }}-anope-2.0.9
         path: '~/.cache
 
           $GITHUB_WORKSPACE/anope
@@ -46,7 +46,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-hybrid-devel
+        key: 2-${{ runner.os }}-hybrid-devel
         path: '~/.cache
 
           $GITHUB_WORKSPACE/ircd-hybrid
@@ -116,7 +116,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-plexus4-devel
+        key: 2-${{ runner.os }}-plexus4-devel
         path: '~/.cache
 
           $GITHUB_WORKSPACE/placeholder
@@ -158,7 +158,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-solanum-devel
+        key: 2-${{ runner.os }}-solanum-devel
         path: '~/.cache
 
           $GITHUB_WORKSPACE/solanum
@@ -198,7 +198,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd-devel
+        key: 2-${{ runner.os }}-unrealircd-devel
         path: '~/.cache
 
           $GITHUB_WORKSPACE/unrealircd
