--- a/workflows.yml
+++ b/workflows.yml
@@ -215,6 +215,11 @@ software:
         separate_build_job: false
         build_script: |
             cd $GITHUB_WORKSPACE/snircd
+
+            # Work around an issue with liblex detection
+            rm configure
+            autoconf
+
             # We need --with-maxcon, to set MAXCONNECTIONS so that it's much lower than
             # NN_MAX_CLIENT, or ircu2 crashes with a somewhat cryptic error on startup.
             ./configure --prefix=$HOME/.local/ --with-maxcon=1024 --enable-debug
@@ -311,8 +316,9 @@ tests:
     plexus4:
         software: [plexus4, anope]
 
-    snircd:
-        software: [snircd]
+    # doesn't build because it can't find liblex for some reason
+    #snircd:
+    #    software: [snircd]
 
     irc2:
         software: [irc2]
