--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -11,10 +11,10 @@ jobs:
     - name: Cache Anope
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-anope-2.0.9
+        key: 3-${{ runner.os }}-anope-2.0.9
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/anope
+          ${{ github.workspace }}/anope
 
           '
     - name: Checkout Anope
