--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -11,10 +11,10 @@ jobs:
     - name: Cache Anope
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-anope-2.0.9
+        key: 3-${{ runner.os }}-anope-2.0.9
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/anope
+          ${{ github.workspace }}/anope
 
           '
     - name: Checkout Anope
@@ -46,10 +46,10 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-charybdis-stable
+        key: 3-${{ runner.os }}-charybdis-stable
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/charybdis
+          ${ github.workspace }/charybdis
 
           '
     - uses: actions/checkout@v2
@@ -86,10 +86,10 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-hybrid-stable
+        key: 3-${{ runner.os }}-hybrid-stable
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/ircd-hybrid
+          ${ github.workspace }/ircd-hybrid
 
           '
     - uses: actions/checkout@v2
@@ -156,10 +156,10 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-plexus4-stable
+        key: 3-${{ runner.os }}-plexus4-stable
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/placeholder
+          ${ github.workspace }/placeholder
 
           '
     - uses: actions/checkout@v2
@@ -198,10 +198,10 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-solanum-stable
+        key: 3-${{ runner.os }}-solanum-stable
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/solanum
+          ${ github.workspace }/solanum
 
           '
     - uses: actions/checkout@v2
@@ -238,10 +238,10 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: 2-${{ runner.os }}-unrealircd-stable
+        key: 3-${{ runner.os }}-unrealircd-stable
         path: '~/.cache
 
-          $GITHUB_WORKSPACE/unrealircd
+          ${ github.workspace }/unrealircd
 
           '
     - uses: actions/checkout@v2
