--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -8,6 +8,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Create directories
       run: cd ~/; mkdir -p .local/ go/
+    - name: Cache Anope
+      uses: actions/cache@v2
+      with:
+        key: 3-${{ runner.os }}-anope-2.0.9
+        path: '~/.cache
+
+          ${{ github.workspace }}/anope
+
+          '
     - name: Checkout Anope
       uses: actions/checkout@v2
       with:
@@ -37,10 +46,12 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-hybrid-devel
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/ircd-hybrid
+        key: 3-${{ runner.os }}-hybrid-devel
+        path: '~/.cache
+
+          ${ github.workspace }/ircd-hybrid
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -105,10 +116,12 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-plexus4-devel
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/placeholder
+        key: 3-${{ runner.os }}-plexus4-devel
+        path: '~/.cache
+
+          ${ github.workspace }/placeholder
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -145,10 +158,12 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-solanum-devel
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/solanum
+        key: 3-${{ runner.os }}-solanum-devel
+        path: '~/.cache
+
+          ${ github.workspace }/solanum
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -183,10 +198,12 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-unrealircd-devel
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/unrealircd
+        key: 3-${{ runner.os }}-unrealircd-devel
+        path: '~/.cache
+
+          ${ github.workspace }/unrealircd
+
+          '
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
