--- a/workflows.yml
+++ b/workflows.yml
@@ -155,6 +155,76 @@ software:
             ./configure --prefix=$HOME/.local/inspircd --development
             make -j 4
             make install
+    irc2:
+        name: irc2
+        separate_build_job: false
+        install_steps:
+            stable:
+                - name: Get source code
+                  run: |-
+                      curl http://ftp.irc.org/ftp/irc/server/irc2.11.2p3.tgz | tar -zx
+                - name: Configure
+                  run: |-
+                      cd $GITHUB_WORKSPACE/irc2.11.2p3
+                      ./configure --prefix=$HOME/.local/
+                      cd x86*
+                      echo "#define CMDLINE_CONFIG/" >> config.h
+                      echo "#define DEFAULT_SPLIT_USERS 0" >> config.h
+                      echo "#define DEFAULT_SPLIT_SERVERS 0" >> config.h
+                      #echo "#undef LIST_ALIS_NOTE" >> config.h
+                      # TODO: find a better way to make it not fork...
+                      echo "#define fork() (0)" >> config.h
+                - name: Compile and install
+                  run: |-
+                      cd $GITHUB_WORKSPACE/irc2.11.2p3/x86*
+                      make -j 4 all
+                      make install
+                      mkdir -p $HOME/.local/bin
+                      cp $HOME/.local/sbin/ircd $HOME/.local/bin/ircd
+            release: null
+            devel: null
+            devel_release: null
+
+    ircu2:
+        name: ircu2
+        repository: undernetirc/ircu2
+        refs:
+            stable: "u2.10.12.19"
+            release: null
+            devel: "u2_10_12_branch"
+            devel_release: null
+        path: ircu2
+        separate_build_job: false
+        build_script: |
+            cd $GITHUB_WORKSPACE/ircu2
+            # We need --with-maxcon, to set MAXCONNECTIONS so that it's much lower than
+            # NN_MAX_CLIENT, or ircu2 crashes with a somewhat cryptic error on startup.
+            ./configure --prefix=$HOME/.local/ --with-maxcon=1024 --enable-debug
+            make -j 4
+            make install
+
+    snircd:
+        name: snircd
+        repository: quakenet/snircd
+        refs:
+            stable: "u2.10.12.10+snircd(1.3.4a)"
+            release: null
+            devel: null  # no update in master since 2013...
+            devel_release: null
+        path: snircd
+        separate_build_job: false
+        build_script: |
+            cd $GITHUB_WORKSPACE/snircd
+
+            # Work around an issue with liblex detection
+            rm configure
+            autoconf
+
+            # We need --with-maxcon, to set MAXCONNECTIONS so that it's much lower than
+            # NN_MAX_CLIENT, or ircu2 crashes with a somewhat cryptic error on startup.
+            ./configure --prefix=$HOME/.local/ --with-maxcon=1024 --enable-debug
+            make -j 4
+            make install
 
     unrealircd:
         name: UnrealIRCd
@@ -246,6 +316,13 @@ tests:
     plexus4:
         software: [plexus4, anope]
 
+    # doesn't build because it can't find liblex for some reason
+    #snircd:
+    #    software: [snircd]
+
+    irc2:
+        software: [irc2]
+
     unrealircd:
         software: [unrealircd]
 
@@ -254,6 +331,7 @@ tests:
 
     unrealircd-anope:
         software: [unrealircd, anope]
+
 
     limnoria:
         software: [limnoria]
